syntax = "proto3";

package mediasoup;

message PrepareSenderRequest {
    string room_name = 1;
}

message PrepareSenderResponse {
    optional Error error = 1;
    string router_rtp_capabilities = 2;
    string transport_options = 3;
}

message ConnectWebrtcTransportRequest {
    string transport_id = 1;
    string dtls_parameters = 2;
}

message ConnectWebrtcTransportResponse {
    optional Error error = 1;
    string transport_id = 2;
}

message Error {
    string message = 1;
    optional int32 code = 2;
    optional string reason = 3;
}